--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="ui negative message">
                         <div class="header fluid">
-                            If the page doesn't load, please report it on <a href="https://github.com/noahc3/SDSetup">GitHub</a>
+                            If the page doesn't load, please report it on <a href="https://github.com/FieryMewtwo/SDSetup">GitHub</a>
                         </div>
                     </div>
                 </div>
